# hermes-music-plugin

./: .gitignore  README.md  plugin.yaml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.hermes/plans/: 2026-04-13_224500-dual-track-playback.md
hermes_music/: __init__.py  library.py  tasks.py
skills/suno-prompt-engineering/: SKILL.md
skills/suno-prompt-engineering/templates/: prompt-format.md
tests/: test_library.py  test_midi.py  test_player.py  test_plugin_registration.py  test_suno.py  test_tasks.py
