[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-music"
version = "0.2.0"
description = "Music generation plugin for Hermes Agent — Suno AI, MIDI composition, and music library management"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "buckster123"},
]
keywords = ["hermes", "agent", "music", "suno", "midi", "ai-music"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
midi = ["midiutil>=1.2"]
retry = ["tenacity>=8.0"]
all = ["midiutil>=1.2", "tenacity>=8.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "responses>=0.23",
    "midiutil>=1.2",
    "tenacity>=8.0",
]

[project.entry-points."hermes_agent.plugins"]
hermes-music = "hermes_music"

[project.urls]
Homepage = "https://github.com/buckster123/hermes-music-plugin"
Repository = "https://github.com/buckster123/hermes-music-plugin"
Issues = "https://github.com/buckster123/hermes-music-plugin/issues"

[tool.setuptools.packages.find]
include = ["hermes_music*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
